<?xml version="1.0"?>
<package>
  <name>?rc_package</name>
  <version>0.1.0</version>
  <description>The ?rc_package package. ?brief</description>

  <maintainer email="?authorEmail">?authorName</maintainer>

  <author email="?authorEmail">?authorName</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>rcomponent</run_depend>

  <export>

  </export>
</package>
